--- a/react-w-ui/package.json
+++ b/react-w-ui/package.json
@@ -8,12 +8,13 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/joy": "^5.0.0-beta.13",
     "@mui/material": "^5.14.16",
+    "@mui/styles": "^5.14.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.60",
-    "@types/react": "^18.2.33",
+    "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "install": "^0.13.0",
     "npm": "^10.2.2",
